[project]
name = "dio-blog-package"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo da Silva Ferreira",email = "eduardo.s.fereira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "databases[aiosqlite]",
    "pyjwt",
    "psycopg2-binary",
    "alembic"
]

[tool.poetry]
packages = [{include = "dio_blog_package", from = "dio_blog"}]


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
flake8 = "*"
mypy = "*"
ipython = "*"
isort = "*"
black = "*"
autopep8 = "*"
pylint = "*"
pytest-asyncio = "*"
pre-commit = "*"
bandit = "*"
httpx = "*"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
